Bug 1358964: Always delete content process temp dir even when there is no profile. r=bsmedberg a=jcristau